logs/offboard_pkg/build.make.094.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp: In function ‘int main(int, char**)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:9:34: error: ‘nVehicle’ was not declared in this scope
    9 |     private_nh.param("nVehicle", nVehicle, 1);
      |                                  ^~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:10:36: error: ‘exist_load’ was not declared in this scope
   10 |     private_nh.param("exist_load", exist_load, 0);
      |                                    ^~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:11:40: error: ‘exist_waypoint’ was not declared in this scope
   11 |     private_nh.param("exist_waypoint", exist_waypoint, 1);
      |                                        ^~~~~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:12:38: error: ‘exist_circle’ was not declared in this scope
   12 |     private_nh.param("exist_circle", exist_circle, 1);
      |                                      ^~~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:13:33: error: ‘nSample’ was not declared in this scope
   13 |     private_nh.param("nSample", nSample, 13);
      |                                 ^~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:14:27: error: ‘R’ was not declared in this scope
   14 |     private_nh.param("R", R, 5);
      |                           ^
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:31:9: error: ‘uav’ was not declared in this scope
   31 |         uav[i].RosData(s);
      |         ^~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:38:16: error: ‘uav’ was not declared in this scope
   38 |             if(uav[i].check_FCUconnected()) {j = j+1;}
      |                ^~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:50:16: error: ‘uav’ was not declared in this scope
   50 |             if(uav[i].check_GPSconnected()) {j = j+1;}
      |                ^~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:63:16: error: ‘uav’ was not declared in this scope
   63 |             if(uav[i].istakeoff(takeoff_alt[i])) {j = j+1;}
      |                ^~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:63:33: error: ‘takeoff_alt’ was not declared in this scope
   63 |             if(uav[i].istakeoff(takeoff_alt[i])) {j = j+1;}
      |                                 ^~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:80:20: error: ‘uav’ was not declared in this scope
   80 |                 if(uav[i].isWaypoint(waypoint)) {j = j+1;}
      |                    ^~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:100:9: error: ‘angle_d’ was not declared in this scope
  100 |         angle_d[0].x() = 0; angle_d[0].y() = 0;
      |         ^~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:104:13: error: ‘uav’ was not declared in this scope
  104 |             uav[nVehicle-1].get_att(yaw_d, q_init);
      |             ^~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:107:13: error: ‘uav’ was not declared in this scope
  107 |             uav[0].get_att(yaw_d, q_init);
      |             ^~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:114:17: error: ‘ned’ was not declared in this scope
  114 |                 ned[i] = uav[i].get_ned(theta_d, yaw_d, R, length[i], angle_d[i]);
      |                 ^~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:114:26: error: ‘uav’ was not declared in this scope
  114 |                 ned[i] = uav[i].get_ned(theta_d, yaw_d, R, length[i], angle_d[i]);
      |                          ^~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:114:60: error: ‘length’ was not declared in this scope
  114 |                 ned[i] = uav[i].get_ned(theta_d, yaw_d, R, length[i], angle_d[i]);
      |                                                            ^~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:114:60: note: suggested alternatives:
In file included from /opt/ros/noetic/include/tf/LinearMath/Matrix3x3.h:20,
                 from /opt/ros/noetic/include/tf/LinearMath/Transform.h:21,
                 from /opt/ros/noetic/include/tf/transform_datatypes.h:41,
                 from /opt/ros/noetic/include/tf/time_cache.h:38,
                 from /opt/ros/noetic/include/tf/tf.h:44,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:12,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:2:
/opt/ros/noetic/include/tf/LinearMath/Quaternion.h:400:1: note:   ‘tf::length’
  400 | length(const Quaternion& q)
      | ^~~~~~
In file included from /opt/ros/noetic/include/tf2/transform_storage.h:36,
                 from /opt/ros/noetic/include/tf2/buffer_core.h:35,
                 from /opt/ros/noetic/include/tf2_ros/buffer_interface.h:35,
                 from /opt/ros/noetic/include/tf2_ros/buffer.h:35,
                 from /opt/ros/noetic/include/tf/tf.h:49,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:12,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:2:
/opt/ros/noetic/include/tf2/LinearMath/Quaternion.h:400:1: note:   ‘tf2::length’
  400 | length(const Quaternion& q)
      | ^~~~~~
In file included from /usr/include/boost/tuple/tuple.hpp:28,
                 from /usr/include/boost/unordered/detail/implementation.hpp:31,
                 from /usr/include/boost/unordered/detail/map.hpp:6,
                 from /usr/include/boost/unordered/unordered_map.hpp:21,
                 from /usr/include/boost/unordered_map.hpp:17,
                 from /opt/ros/noetic/include/tf/tf.h:45,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:12,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:2:
/usr/include/boost/tuple/detail/tuple_basic.hpp:84:26: note:   ‘boost::tuples::length’
   84 | template<class T> struct length;
      |                          ^~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:115:51: error: ‘lla’ was not declared in this scope
  115 |                 uav[i].ned2lla(ned[i], lla_lead0, lla[i]);
      |                                                   ^~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:119:20: error: ‘uav’ was not declared in this scope
  119 |                 if(uav[i].is_GPS_succuss(lla[i])){j = j+1;}
      |                    ^~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:119:42: error: ‘lla’ was not declared in this scope
  119 |                 if(uav[i].is_GPS_succuss(lla[i])){j = j+1;}
      |                                          ^~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:120:17: error: ‘local_lla’ was not declared in this scope
  120 |                 local_lla[i] = uav[i].get_lla();
      |                 ^~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:120:32: error: ‘uav’ was not declared in this scope
  120 |                 local_lla[i] = uav[i].get_lla();
      |                                ^~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:134:35: error: ‘uav’ was not declared in this scope
  134 |                        distance = uav[i].calcGPSDistance(local_lla[i].x(), local_lla[i].y(), local_lla[i].z(),local_lla[j].x(), local_lla[j].y(), local_lla[j].z());
      |                                   ^~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:134:58: error: ‘local_lla’ was not declared in this scope
  134 |                        distance = uav[i].calcGPSDistance(local_lla[i].x(), local_lla[i].y(), local_lla[i].z(),local_lla[j].x(), local_lla[j].y(), local_lla[j].z());
      |                                                          ^~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:146:21: error: ‘uav’ was not declared in this scope
  146 |                     uav[i].SetAttOnly(q_init);
      |                     ^~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:163:16: error: ‘uav’ was not declared in this scope
  163 |             if(uav[i].CallLand()) {j = j+1;}
      |                ^~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:63: CMakeFiles/offboard_pkg_node.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
